# parallel-ga

./: CMakeLists.txt  LICENSE  README.md  eval.cpp  eval.h  individual.cpp  individual.h  infile  main.cpp  species.cpp  species.h  types.h  utility.cpp  utility.h
